--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -8,7 +8,7 @@
 \setCJKmainfont[BoldFont={Microsoft JhengHei Bold}]{Microsoft JhengHei}
 \setCJKmonofont{PMingLiU}
 \setCJKsansfont{DFKai-SB}
- \newCJKfontfamily[cuhei]\cuti{Microsoft JhengHei Bold}
+\newCJKfontfamily[cuhei]\cuti{Microsoft JhengHei Bold}
 \hypersetup{
     pdftitle={},
     pdfauthor={},
@@ -23,7 +23,7 @@
 
 \begin{document}
 \header{于}{润泽}
-      {研究方向，所学专业}
+      {北京师范大学，理科试验班}
       
 % Fake text to add separator      
 \fcolorbox{white}{gray}{\parbox{\dimexpr\textwidth-2\fboxsep-2\fboxrule}{%
@@ -34,36 +34,36 @@
 \begin{aside}
 \section{\cuti 生日}
 1994.11.18
+\section{\cuti 性别}
+男
+\section{\cuti 民族}
+汉
 \section{\cuti 籍贯}
 河北唐山
-\section{\cuti 地址}
-海淀区~新街口外大街19号~北京师范大学
 \section{\cuti 政治面貌}
 共青团员
+\section{\cuti 地址}
+海淀区~新街口外大街19号~北京师范大学
 \section{\cuti 电话}
 +86~188~1147~7848
 \section{Mail}
 \href{mailto:yurunze@mail.bnu.edu.cn}{\textbf{yurunze@}\\mail.bnu.edu.cn}
 \href{mailto:watrz@hotmail.com}{\textbf{watrz@}\\hotmail.com}
-\section{\cuti 编程技能}
+\section{\cuti 计算机技能}
     ~
-    \includegraphics[scale=0.62]{img/programming.pdf}
+    \includegraphics[scale=0.42]{img/programming.pdf}
     ~
-  \section{\cuti 操作系统运维}
-    \textbf{GNU/Linux}\includegraphics[scale=0.16]{img/5stars}
-    \textbf{MacOS}\includegraphics[scale=0.16]{img/4stars}
-    \textbf{Windows}\includegraphics[scale=0.16]{img/2stars}
-  \section{\cuti 其他技能}
-    ~
-    \includegraphics[scale=0.62]{img/personal.pdf}
-    ~
+  \section{\cuti 操作系统}
+    \textbf{Windows}\includegraphics[scale=0.16]{img/5stars}
+    \textbf{GNU/Linux}\includegraphics[scale=0.16]{img/4stars}
   \section{\cuti 语言}
     \textbf{English}\includegraphics[scale=0.16]{img/5stars}
     \textbf{Deutsch}\includegraphics[scale=0.16]{img/3stars}
     \textbf{日本語}\includegraphics[scale=0.16]{img/2stars}
 \end{aside}
-
-\section{\cuti 重要项目经历}
+\section{\cuti 目标岗位}
+技术文案专员（实习生）
+\section{\cuti 项目经历}
 \begin{entrylist}
   \entry
     {2013 - 2015}
@@ -72,18 +72,18 @@
     {项目主要研究内容\\}
 \end{entrylist}
 
-\section{\cuti 高等教育经历}
+\section{\cuti 教育经历}
 \begin{entrylist}
   \entry
     {2012 - 2016}
     {\cuti 物理学 学士学位}
-    {北京师范大学（在读）}
-    {研究方向：xxxxxx\\
+    {北京师范大学理科试验班（在读）}
+    {研究方向：计算物理，微磁学\\
     参与竞赛：xxxxxxxxx\\
     骨干经历：xxxxxxxxx\\}
 \end{entrylist}
 
-\section{\cuti 论文发表情况}
+\section{\cuti 荣誉~\&奖励}
 \begin{entrylist}
   \entry
     {09/2014}
@@ -92,11 +92,11 @@
     {\emph{论文大概内容}}
 \end{entrylist}\\
 
-\section{\cuti 出版物发表情况}
-作者\\
-\textbf{书名}\\
-\emph{主要工作}
-\\
+\section{\cuti 课余活动}
+\begin{entrylist}
+\entry{2014 - 今}{\cuti 北京诗词学会}{会员}{创作并发表了一些近体诗和词}
+\entry{2012 - 今}{\cuti 骑行}{}{累计骑行两万余公里，旅程涉及河北、北京、天津、山东、山西、河南和台湾}
+\end{entrylist}
 
 \vspace{40pt}
 
